# Creature-type-generator

./: .gitignore  README.md  app.py  creature-types-generator.py  creature_types.txt  creature_types_generator_basic.py  generated_creatures.txt  kivy-creature-types.py  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/creature_type_generator_flutter/: MainActivity.kt
assets/: creature_types.txt
creature-types-project/: pyproject.toml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
templates/: index.html
tests/: tests_app.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
