[project]
name = "creature-types-generator"
version = "0.2.0"
description = "Program for generating a random mtg creature type"
authors = [
    {name = "Avery",email = "aajcclout13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
